data/derived/comb/progs/unify/prog6522.ml.out
Characters 14-38:
  let _ = helper("4",makeRand(10,50), 3);;
                ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type (int * int -> int) * int
